fixed chosen bars way too wide

--- a/src/Kunstmaan/DashboardBundle/Resources/public/scss/_dashboard-setup.scss
+++ b/src/Kunstmaan/DashboardBundle/Resources/public/scss/_dashboard-setup.scss
@@ -45,10 +45,6 @@
         float:left;
         padding-right:40px;
         margin-right:-1px;
-
-        select {
-            width:100%;
-        }
     }
 
     #control-group {
